--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.db
 finnhubkey.txt
 
 
@@ -28,6 +29,7 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
+Migrations/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
